# CaptureBurstSpeedTest

./: .gitignore  settings.gradle
app/: build.gradle
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/com/cdts/burstspeedtest/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/cdts/synccapture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ALog.h  CMakeLists.txt  x264_encoder.cpp
app/src/main/cpp/libs/include/: x264.h
app/src/main/java/com/cdts/beans/: Command.java  DeviceBean.java  ParamBean.java
app/src/main/java/com/cdts/burstspeedtest/: CameraController.java  MainActivity.java
app/src/main/java/com/cdts/synccapture/: AudioRecordController.java  BaseActivity.java  CameraController.java  CaptureApplication.java  MainActivity.java  ManualActivity.java  MySeekBar.java  SmbClient.java  SpeedTestActivity.java  Storage.java  SyncApplication.java  TimeStaticsView.java  TimeSyncActivity.java  UdpClient.java  UdpReceiverService.java  Utils.java
app/src/main/res/drawable/: ic_baseline_chevron_right_24.xml  shape_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_manual.xml  activity_speed_test.xml  activity_time_sync.xml  layout_3a_input.xml  layout_seek_bak.xml  layout_smb.xml
app/src/main/res/menu/: main_menu.xml  speed_test_menu.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cdts/burstspeedtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
udp_server/: build.gradle  settings.gradle
(+13 files in other folders)
